<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>pcl_clustering</name>
  <version>0.0.0</version>
  <description>cluster 3D points with PCL Library in ROS2</description>

  <maintainer email="ardcxvsk@gmail.com">Lee-sunkyoung</maintainer>
  <author email="ardcxvsk@gmail.com">Lee-sunkyoung</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl</depend>
  <depend>pcl_conversions</depend>
  <depend>base_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
